syntax = "proto3";

package scenariorunner;

import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";
import "vega/proto/vega.proto";

message Instruction {
    string Description = 1;
    string Request = 2;
    google.protobuf.Any Message = 3;

}

message InstructionSet {
    string Description = 1;
    repeated Instruction Instructions = 2;

}

message InstructionResult {
    google.protobuf.Any Response = 1;
    string Error = 2;
    Instruction Instruction = 3;
}

message Metadata {
    uint64 InstructionsProcessed = 1;
    uint64 InstructionsOmitted = 2;
    uint64 TradesGenerated = 3;
    google.protobuf.Duration ProcessingTime = 5;
    vega.MarketDepth FinalOrderBook = 6;
}

message ResultSet {
    Metadata Summary = 1;
    repeated InstructionResult Results = 2;
}